Fix: display to visibility

--- a/frontend/src/app/card/card.component.scss
+++ b/frontend/src/app/card/card.component.scss
@@ -110,5 +110,5 @@ $circle_size: 200px;
 }
 
 .hidden {
-    display: none;
+    visibility: hidden;
 }
